# gnusician

./: .clang-format  .gitignore  CMakeLists.txt  LoginManager.cpp  LoginManager.h  NavigationDrawer.cpp  NavigationDrawer.h  NavigationDrawer.ui  README.md  UserInfo.cpp  UserInfo.h  common.cpp  common.h  loginManager.cpp  loginManager.h  loginManager.ui  loginmanager.cpp  loginmanager.h  loginmanager.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  navigationdrawer.cpp  navigationdrawer.h  settingsmanager.cpp  settingsmanager.h  settingsmanager.ui  userInfo.cpp  userInfo.h  userinfo.cpp  userinfo.h
audio/: audio.py
flatpak/: buildRelease.sh  com.gnusicianproject.gnusician.json
flatpak/release/: installRepo.sh  runGnusician.sh  uninstallRepo.sh
flatpak/release/export/: com.gnusicianproject.gnusician.desktop
qt-material-widgets/components/: CMakeLists.txt  qtmaterialappbar.h
resources/: appresources.qrc
resources/forms/: loginPage.ui
